# orekit-factory

./: .coverage  .flake8  .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: lint-and-test.yml
src/orekitfactory/: __init__.py  dates.py  ellipsoids.py  hooks.py  initializer.py  math.py  orbits.py  propagator.py
src/orekitfactory/factory/: __init__.py  conventions.py  dates.py  ellipsoids.py  frames.py  orbits.py  propagator.py
src/orekitfactory/time/: __init__.py  _dateinterval.py  _dateintervallist.py
src/orekitfactory/utils/: __init__.py  dataloader.py  quantity_units.py  urlvalidator.py
src/tests/: conftest.py  test_conventions.py  test_dates.py  test_ellipsoids.py  test_frames.py  test_hooks.py  test_initializer.py  test_math.py  test_orbits.py  test_propagator.py
src/tests/data/: finals2000A.all
