[build-system]
requires = ["setuptools", "setuptools_scm[toml]>7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orekit-factory"
description = "A collection of factory methods to bootstrap orekit python applications."
authors = [
    { name = "Joe Reed", email="greyskyy@gmail.com" }
]
requires-python = ">=3.9"
dynamic = [
    "version"
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "astropy >= 5.1",
    "requests >= 2.28.1",
    "orekit >= 11.2"
]

[project.urls]
homepage = "https://github.com/greyskyy/orekit-factory"
repository = "https://github.com/greyskyy/orekit-factory"

[tool.setuptools_scm]
# Empty section enables setuptools_scm

[project.entry-points."pyrebar.preinit"]
orekit = "orekitfactory.hooks:pre_init"

[project.entry-points."pyrebar.postinit"]
orekit = "orekitfactory.hooks:post_init"

[tool.setuptools.packages.find]
where = ["src"]
include = ["orekitfactory*"]
exclude = ["**.tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --junitxml=.build/test_output.xml --cov=orekitfactory --cov-fail-under=80 --cov-report term --cov-report html:.build/test_cov_html --cov-report xml:.build/test-cov.xml"
pythonpath = [
  "src"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
